<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/packFragment"
        android:icon="@drawable/baseline_catching_pokemon_24"
        android:title="@string/packs_menu" />
    <item
        android:id="@+id/collectionFragment"
        android:icon="@drawable/collection_icon"
        android:title="@string/title_collection" />
    <item
        android:id="@+id/navigation_trade"
        android:icon="@drawable/baseline_compare_arrows_24"
        android:title="@string/title_trade"
        android:enabled="false"/>
</menu>